--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./styles/main.css" rel="stylesheet">
     <title>Virtual Keyboard</title>
-    <script defer src="./scripts/script.js" type="module"></script>
+    <script defer src="./dist/script.bundle.js" type="module"></script>
 </head>
 <body>
     
